# GitPrompt

./: .gitignore  .markdownlint.json  CMakeLists.txt  Git.cpp  README.md
benchmark/: result.py  time.sh
scripts/: openFiles.sh
src/: Git.cpp  Git.hpp  main.cpp  pch.hpp
